--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>cn.kiwipeach.cn</groupId>
     <artifactId>Jenkins_Demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
+    <build>
+        <finalName>${artifactId}</finalName>
+    </build>
 
 </project>
